...
    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .clear
        collectionView.backgroundColor = .clear
        collectionView.dataSource = self
        collectionView.delegate = self
        collectionView.accessibilityIdentifier = "item.thread"
        collectionView.alwaysBounceVertical = true
        collectionView.keyboardDismissMode = .interactive
        collectionView.register(ItemCardGroundCell.self, forCellWithReuseIdentifier: "ground")
        collectionView.register(ItemTextCell.self, forCellWithReuseIdentifier: "text")
        collectionView.register(ItemCodeCell.self, forCellWithReuseIdentifier: "code")
        collectionView.register(ItemTableCell.self, forCellWithReuseIdentifier: "table")
...
